adit filter ant implement CardGame

--- a/src/components/cardGame/cardGame.css
+++ b/src/components/cardGame/cardGame.css
@@ -5,7 +5,7 @@
   align-items: center;
 }
 .card__box {
-  border: 1px solid white;
+  border: 1px solid black;
   width: 60%;
   display: flex;
   align-items: center;
